# yaml-to-fstab

./: .gitignore  AUTHORS  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
