[package]
name = "yaml-to-fstab"
version = "0.1.0"
authors = ["Niall Coates <1349685+Niall-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
structopt = "0.3.22"
serde = { version = "1.0.129", features = ["derive"] }
serde_yaml = "0.8.20"
